# advent_of_code

./: .gitignore  README.md  WORKFLOW.md  core.py  pyproject.toml  pytest.ini  requirements.txt  test.py
01/: 01_p1.py  part1.py  part2.py  readme.md
02/: 02_p1.py  02_p2.py  part1.py  part2.py
03/: part1.py  part2.py
04/: part1.py  part2.py  readme.md
05/: part1.py  part2.py  readme.md
06/: part1.py  part2.py  readme.md
07/: part1.py  readme.md
08/: part2.py  part2_2.py  readme.md
2020/: adventofcode_day_17.py  adventofcode_day_17_2.py  markov.py  passport.py
2020/descriptions/: day_17.md
2021/01/: 01.md  01_p2.py
2021/02/: 02.md
2021/03/: 03.md  03_p2.py  03_p2v2.py
2021/04/: part2.py
2021/05/: part1.py  part2.py
2021/06/: part1.py  part2.py
2021/07/: part2.py
2021/08/: part1.py  part2.py
data/: README.md  day_01_example.yaml  day_01_p1_data.yaml  day_01_p1_example.yaml  day_01_p2_data.yaml  day_01_p2_example.yaml
tests/: README.md  test_01_01.py  test_01_02.py
